force-app/main/default/objects/Joining_form_details__c/Joining_form_details__c.object-meta.xml
<CustomObject>
    <label>Joining form detail</label>
    <nameField>
        <displayFormat>J-{0000}</displayFormat>
        <label>Joining Id No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Joining form details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>