force-app/main/default/objects/Joining_form_details__c/fields/Aadhar_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Card_Number__c</fullName>
    <externalId>true</externalId>
    <label>Aadhar Card Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>