force-app/main/default/objects/Joining_form_details__c/fields/Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Name__c</fullName>
    <label>Account Holder Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>