force-app/main/default/objects/Joining_form_details__c/fields/Alternative_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Contact_Number__c</fullName>
    <label>Alternative Contact Number</label>
    <type>Phone</type>
</CustomField>