force-app/main/default/objects/Joining_form_details__c/fields/BE_BTech_BCA_BSc_BHM_Bcom__c.field-meta.xml
<CustomField>
    <fullName>BE_BTech_BCA_BSc_BHM_Bcom__c</fullName>
    <label>BE/BTech/BCA/BSc/BHM/Bcom</label>
    <length>20</length>
    <type>Text</type>
</CustomField>