force-app/main/default/objects/Joining_form_details__c/fields/Branch_of_Graduation__c.field-meta.xml
<CustomField>
    <fullName>Branch_of_Graduation__c</fullName>
    <label>Branch of Graduation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>