force-app/main/default/objects/Joining_form_details__c/fields/Branch_Subject__c.field-meta.xml
<CustomField>
    <fullName>Branch_Subject__c</fullName>
    <label>Branch/Subject</label>
    <length>20</length>
    <type>Text</type>
</CustomField>