force-app/main/default/objects/Joining_form_details__c/fields/Brother_Age__c.field-meta.xml
<CustomField>
    <fullName>Brother_Age__c</fullName>
    <label>Brother Age</label>
    <length>3</length>
    <type>Text</type>
</CustomField>