force-app/main/default/objects/Joining_form_details__c/fields/Brother_Education_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Brother_Education_Occupation__c</fullName>
    <label>Brother Education/Occupation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>