force-app/main/default/objects/Joining_form_details__c/fields/City_District_in_which_college_belongs__c.field-meta.xml
<CustomField>
    <fullName>City_District_in_which_college_belongs__c</fullName>
    <label>City/District in which college belongs</label>
    <length>20</length>
    <type>Text</type>
</CustomField>