force-app/main/default/objects/Joining_form_details__c/fields/City_District_of_HSC_college__c.field-meta.xml
<CustomField>
    <fullName>City_District_of_HSC_college__c</fullName>
    <label>City/District of HSC college</label>
    <length>20</length>
    <type>Text</type>
</CustomField>