force-app/main/default/objects/Joining_form_details__c/fields/City_District_of_SSC_school__c.field-meta.xml
<CustomField>
    <fullName>City_District_of_SSC_school__c</fullName>
    <label>City/District of SSC school</label>
    <length>25</length>
    <type>Text</type>
</CustomField>