force-app/main/default/objects/Joining_form_details__c/fields/Date_Month_Year_of_passing_HSC__c.field-meta.xml
<CustomField>
    <fullName>Date_Month_Year_of_passing_HSC__c</fullName>
    <label>Date/Month/Year of passing HSC</label>
    <type>Date</type>
</CustomField>