force-app/main/default/objects/Joining_form_details__c/fields/Date_Year_of_Passing__c.field-meta.xml
<CustomField>
    <fullName>Date_Year_of_Passing__c</fullName>
    <label>Date&amp;Year of Passing</label>
    <type>Date</type>
</CustomField>