force-app/main/default/objects/Joining_form_details__c/fields/Diploma__c.field-meta.xml
<CustomField>
    <fullName>Diploma__c</fullName>
    <label>Diploma</label>
    <length>20</length>
    <type>Text</type>
</CustomField>