force-app/main/default/objects/Joining_form_details__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Domain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>JAva full stack</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Mern stack</fullName>
            </value>
            <value>
                <fullName>Data Analytics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>