force-app/main/default/objects/Joining_form_details__c/fields/Elective_Subjects__c.field-meta.xml
<CustomField>
    <fullName>Elective_Subjects__c</fullName>
    <label>Elective Subjects</label>
    <length>20</length>
    <type>Text</type>
</CustomField>