force-app/main/default/objects/Joining_form_details__c/fields/Father_Age__c.field-meta.xml
<CustomField>
    <fullName>Father_Age__c</fullName>
    <label>Father Age</label>
    <length>3</length>
    <type>Text</type>
</CustomField>