force-app/main/default/objects/Joining_form_details__c/fields/Father_Education_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Father_Education_Occupation__c</fullName>
    <label>Father Education/Occupation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>