force-app/main/default/objects/Joining_form_details__c/fields/Games__c.field-meta.xml
<CustomField>
    <fullName>Games__c</fullName>
    <label>Games</label>
    <length>20</length>
    <type>Text</type>
</CustomField>