force-app/main/default/objects/Joining_form_details__c/fields/Gradiuation_Elective_Subjects__c.field-meta.xml
<CustomField>
    <fullName>Gradiuation_Elective_Subjects__c</fullName>
    <label>Gradiuation Elective Subjects</label>
    <length>20</length>
    <type>Text</type>
</CustomField>