force-app/main/default/objects/Joining_form_details__c/fields/Graduation_College_Name__c.field-meta.xml
<CustomField>
    <fullName>Graduation_College_Name__c</fullName>
    <label>Graduation College Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>