force-app/main/default/objects/Joining_form_details__c/fields/Graduation_Month_Passing_year__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Month_Passing_year__c</fullName>
    <label>Graduation Month &amp; Passing year</label>
    <type>Date</type>
</CustomField>