force-app/main/default/objects/Joining_form_details__c/fields/Graduation_Percentage_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Percentage_CGPA__c</fullName>
    <label>Graduation Percentage/CGPA</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>