force-app/main/default/objects/Joining_form_details__c/fields/Graduation_University_Name__c.field-meta.xml
<CustomField>
    <fullName>Graduation_University_Name__c</fullName>
    <label>Graduation University Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jawaharlal Nehru Technological University (JNTU), Kakinada</fullName>
            </value>
            <value>
                <fullName>Andhra University, Visakhapatnam</fullName>
            </value>
            <value>
                <fullName>Sri Venkateswara University, Tirupati</fullName>
            </value>
            <value>
                <fullName>Maharashtra State Board of Technical Education (MSBTE)</fullName>
            </value>
            <value>
                <fullName>Veermata Jijabai Technological Institute (VJTI), Mumbai</fullName>
            </value>
            <value>
                <fullName>Government Polytechnic Mumbai</fullName>
            </value>
            <value>
                <fullName>Department of Technical Education (DTE), Karnataka</fullName>
            </value>
            <value>
                <fullName>RV College of Engineering, Bangalore</fullName>
            </value>
            <value>
                <fullName>PES University, Bangalore</fullName>
            </value>
            <value>
                <fullName>Directorate of Technical Education (DoTE), Tamil Nadu</fullName>
            </value>
            <value>
                <fullName>PSG Polytechnic College, Coimbatore</fullName>
            </value>
            <value>
                <fullName>Sri Krishna Polytechnic College, Coimbatore</fullName>
            </value>
            <value>
                <fullName>Gujarat Technological University (GTU), Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Nirma University, Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Government Polytechnic Ahmedabad</fullName>
            </value>
            <value>
                <fullName>Board of Technical Education Uttar Pradesh (BTEUP)</fullName>
            </value>
            <value>
                <fullName>Harcourt Butler Technical University (HBTU), Kanpur</fullName>
            </value>
            <value>
                <fullName>Bundelkhand University, Jhansi</fullName>
            </value>
            <value>
                <fullName>Delhi Skill and Entrepreneurship University (DSEU)</fullName>
            </value>
            <value>
                <fullName>Indira Gandhi National Open University (IGNOU)</fullName>
            </value>
            <value>
                <fullName>Delhi Technological University (DTU)</fullName>
            </value>
            <value>
                <fullName>West Bengal State Council of Technical Education (WBSCTE)</fullName>
            </value>
            <value>
                <fullName>Jadavpur University, Kolkata</fullName>
            </value>
            <value>
                <fullName>Maulana Abul Kalam Azad University of Technology (MAKAUT), Kolkata</fullName>
            </value>
            <value>
                <fullName>Punjab State Board of Technical Education and Industrial Training (PSBTE &amp; IT)</fullName>
            </value>
            <value>
                <fullName>Punjab Polytechnic College, Mohali</fullName>
            </value>
            <value>
                <fullName>Guru Nanak Dev University (GNDU), Amritsar</fullName>
            </value>
            <value>
                <fullName>Board of Technical Education Rajasthan (BTER)</fullName>
            </value>
            <value>
                <fullName>Rajasthan Technical University (RTU), Kota</fullName>
            </value>
            <value>
                <fullName>Government Polytechnic College, Jaipur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>