force-app/main/default/objects/Joining_form_details__c/fields/Graduation_University_Roll_No__c.field-meta.xml
<CustomField>
    <fullName>Graduation_University_Roll_No__c</fullName>
    <label>Graduation University Roll No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>