force-app/main/default/objects/Joining_form_details__c/fields/Graduation_Univesity_City_District__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Univesity_City_District__c</fullName>
    <label>Graduation University City/District</label>
    <length>20</length>
    <type>Text</type>
</CustomField>