force-app/main/default/objects/Joining_form_details__c/fields/Hobbies__c.field-meta.xml
<CustomField>
    <fullName>Hobbies__c</fullName>
    <label>Hobbies</label>
    <length>20</length>
    <type>Text</type>
</CustomField>