force-app/main/default/objects/Joining_form_details__c/fields/Job_Location__c.field-meta.xml
<CustomField>
    <fullName>Job_Location__c</fullName>
    <label>Job Location</label>
    <length>18</length>
    <type>Text</type>
</CustomField>