force-app/main/default/objects/Joining_form_details__c/fields/Mother_Age__c.field-meta.xml
<CustomField>
    <fullName>Mother_Age__c</fullName>
    <label>Mother Age</label>
    <length>3</length>
    <type>Text</type>
</CustomField>