force-app/main/default/objects/Joining_form_details__c/fields/Mother_Education_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Mother_Education_Occupation__c</fullName>
    <label>Mother Education/Occupation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>