force-app/main/default/objects/Joining_form_details__c/fields/Name_Mr_Miss_Mrs__c.field-meta.xml
<CustomField>
    <fullName>Name_Mr_Miss_Mrs__c</fullName>
    <label>Name (Mr/Miss/Mrs)</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>