force-app/main/default/objects/Joining_form_details__c/fields/Name_of_HSC_board__c.field-meta.xml
<CustomField>
    <fullName>Name_of_HSC_board__c</fullName>
    <label>Name of HSC board</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assam Higher Secondary Education Council (AHSEC)</fullName>
            </value>
            <value>
                <fullName>Bihar School Examination Board (BSEB)</fullName>
            </value>
            <value>
                <fullName>Board of High School and Intermediate Education Uttar Pradesh (UPMSP)</fullName>
            </value>
            <value>
                <fullName>Board of Intermediate Education, Andhra Pradesh (BIEAP)</fullName>
            </value>
            <value>
                <fullName>Board of Intermediate Education, Telangana (TSBIE)</fullName>
            </value>
            <value>
                <fullName>Board of School Education Haryana (BSEH)</fullName>
            </value>
            <value>
                <fullName>Board of Secondary Education, Madhya Pradesh (MPBSE)</fullName>
            </value>
            <value>
                <fullName>Board of Secondary Education, Rajasthan (RBSE)</fullName>
            </value>
            <value>
                <fullName>Central Board of Secondary Education (CBSE) Delhi</fullName>
            </value>
            <value>
                <fullName>Chhattisgarh Board of Secondary Education (CGBSE)</fullName>
            </value>
            <value>
                <fullName>Council of Higher Secondary Education, Manipur (COHSEM)</fullName>
            </value>
            <value>
                <fullName>Council of Higher Secondary Education, Odisha (CHSE Odisha)</fullName>
            </value>
            <value>
                <fullName>Department of Pre-University Education, Karnataka (PUE Karnataka)</fullName>
            </value>
            <value>
                <fullName>Directorate of School Education, Arunachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Goa Board of Secondary and Higher Secondary Education (GBSHSE)</fullName>
            </value>
            <value>
                <fullName>Gujarat Secondary and Higher Secondary Education Board (GSEB)</fullName>
            </value>
            <value>
                <fullName>Himachal Pradesh Board of School Education (HPBOSE)</fullName>
            </value>
            <value>
                <fullName>Jharkhand Academic Council (JAC)</fullName>
            </value>
            <value>
                <fullName>Kerala Board of Higher Secondary Education (KBHSE)</fullName>
            </value>
            <value>
                <fullName>Maharashtra State Board of Secondary and Higher Secondary Education (MSBSHSE)</fullName>
            </value>
            <value>
                <fullName>Meghalaya Board of School Education (MBOSE)</fullName>
            </value>
            <value>
                <fullName>Mizoram Board of School Education (MBSE)</fullName>
            </value>
            <value>
                <fullName>Nagaland Board of School Education (NBSE)</fullName>
            </value>
            <value>
                <fullName>Punjab School Education Board (PSEB)</fullName>
            </value>
            <value>
                <fullName>Sikkim Board of Secondary Education</fullName>
            </value>
            <value>
                <fullName>Tamil Nadu State Board of School Examination (TN HSC)</fullName>
            </value>
            <value>
                <fullName>Tripura Board of Secondary Education (TBSE)</fullName>
            </value>
            <value>
                <fullName>Uttarakhand Board of School Education (UBSE)</fullName>
            </value>
            <value>
                <fullName>West Bengal Council of Higher Secondary Education (WBCHSE)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>