force-app/main/default/objects/Joining_form_details__c/fields/Name_of_HSC_college__c.field-meta.xml
<CustomField>
    <fullName>Name_of_HSC_college__c</fullName>
    <label>Name of HSC college</label>
    <length>20</length>
    <type>Text</type>
</CustomField>