force-app/main/default/objects/Joining_form_details__c/fields/Name_of_SSC_school__c.field-meta.xml
<CustomField>
    <fullName>Name_of_SSC_school__c</fullName>
    <label>Name of SSC school</label>
    <length>25</length>
    <type>Text</type>
</CustomField>