force-app/main/default/objects/Joining_form_details__c/fields/Pan_Card_No__c.field-meta.xml
<CustomField>
    <fullName>Pan_Card_No__c</fullName>
    <label>Pan Card No</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>