force-app/main/default/objects/Joining_form_details__c/fields/Parent_s_Contact_Number_Father_Mother__c.field-meta.xml
<CustomField>
    <fullName>Parent_s_Contact_Number_Father_Mother__c</fullName>
    <label>Parent&apos;s Contact Number: Father/Mother</label>
    <type>Phone</type>
</CustomField>