force-app/main/default/objects/Joining_form_details__c/fields/Passport_No__c.field-meta.xml
<CustomField>
    <fullName>Passport_No__c</fullName>
    <label>Passport No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>