force-app/main/default/objects/Joining_form_details__c/fields/Percentage_CGPA__c.field-meta.xml
<CustomField>
    <fullName>Percentage_CGPA__c</fullName>
    <label>Percentage/CGPA</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>